# sundials

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  sundials-uncrustify-ignore.cfg  sundials-uncrustify.cfg
.github/workflows/: build-ci-containers-e4s.yml  codeql-analysis.yml  double-precision.yml  spack-develop.yml  spack-e4s.yml  spack-latest.yml  tpl-tests-spack-develop.yml  tpl-tests-spack-latest.yml
benchmarks/diffusion_2D/: main_cvode.cpp
cmake/: SundialsBuildOptionsPre.cmake  SundialsSetupCompilers.cmake  SundialsSetupTesting.cmake  SundialsTPLOptions.cmake
cmake/macros/: SundialsAddTest.cmake
cmake/tpl/: SundialsLapack.cmake
config/: SundialsAddTest.cmake  SundialsSuperLUDIST.cmake  SundialsTesting.cmake
examples/cvode/: CMakeLists.txt
examples/nvector/: test_nvector.c
examples/sunlinsol/: CMakeLists.txt  test_sunlinsol.h
examples/sunmatrix/: CMakeLists.txt  test_sunmatrix.h
examples/utilities/: custom_memory_helper_sycl.h
include/arkode/: arkode.h  arkode_arkstep.h  arkode_butcher.h  arkode_butcher_dirk.h  arkode_butcher_erk.h  arkode_erkstep.h  arkode_mristep.h  arkode_xbraid.h
include/cvode/: cvode.h
include/cvodes/: cvodes.h
include/ida/: ida.h
include/idas/: idas.h
include/kinsol/: kinsol.h  kinsol_py.h
include/nvector/: nvector_mpiplusx.h  nvector_openmp.h  nvector_parallel.h  nvector_parhyp.h  nvector_pthreads.h  nvector_serial.h  nvector_sycl.h
include/suncontrol/: suncontrol_mrihtol.h
include/sundials/: sundials_config.in  sundials_context.h  sundials_core.h  sundials_core.hpp  sundials_errors.h  sundials_iterative.h  sundials_linearsolver.h  sundials_logger.h  sundials_matrix.h  sundials_memory.h  sundials_mpi_types.h  sundials_nonlinearsolver.h  sundials_nvector.h  sundials_profiler.h  sundials_sycl_policies.hpp
include/sunlinsol/: sunlinsol_band.h  sunlinsol_dense.h  sunlinsol_onemkldense.h  sunlinsol_pcg.h  sunlinsol_spfgmr.h  sunlinsol_spgmr.h  sunlinsol_sptfqmr.h
include/sunmatrix/: sunmatrix_band.h  sunmatrix_dense.h  sunmatrix_onemkldense.h  sunmatrix_sparse.h
include/sunmemory/: sunmemory_sycl.h
include/sunnonlinsol/: sunnonlinsol_fixedpoint.h  sunnonlinsol_newton.h
regression/: suntest.sh  suntest_noextlibs.sh  suntest_xsdk.sh
scripts/: shared
src/arkode/: CMakeLists.txt  arkode.c  arkode_adapt.c  arkode_arkstep.c  arkode_arkstep_impl.h  arkode_arkstep_io.c  arkode_arkstep_nls.c  arkode_bandpre.c  arkode_bbdpre.c  arkode_butcher.c  arkode_butcher_dirk.c  arkode_butcher_erk.c  arkode_erkstep.c  arkode_erkstep_impl.h  arkode_erkstep_io.c  arkode_impl.h  arkode_interp.c  arkode_io.c  arkode_ls.c  arkode_mri_tables.c  arkode_mri_tables.def  arkode_mristep.c  arkode_mristep_impl.h  arkode_mristep_io.c  arkode_mristep_nls.c  arkode_root.c
src/cvode/: cvode.c  cvode_bandpre.c  cvode_bbdpre.c  cvode_diag.c  cvode_fused_gpu.cpp  (+8 more)
swig/: Makefile
test/: README.md  config_cmake.py  env.default.sh  suntest.sh  suntest_tarscript.sh  suntest_xsdk.sh  testRunner  test_branch.sh  test_driver.sh  test_pr.sh  test_release.sh
test/unit_tests/arkode/CXX_serial/: CMakeLists.txt  ark_test_accumerror_brusselator.cpp  ark_test_accumerror_brusselator_-4_2.out  ark_test_accumerror_brusselator_3_1.out  ark_test_accumerror_brusselator_5_3.out  ark_test_accumerror_kpr.cpp  ark_test_accumerror_kpr_0_3.out  ark_test_accumerror_kpr_1_3_-5.0.out  ark_test_accumerror_kpr_1_5_-5.0.out  ark_test_dahlquist_mri.out  ark_test_kpr_mriadapt.cpp
(+178 files in other folders)
